update sustainability code (selection of efficient nodes)

--- a/nebula/frontend/templates/deployment.html
+++ b/nebula/frontend/templates/deployment.html
@@ -955,8 +955,13 @@
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="nodeSelectionStrategyOptions"
-                            id="nodesel-strat-distance-voting-btn" value="distance-voting" checked>
+                            id="nodesel-strat-distance-voting-btn" value="distance-voting">
                         <label class="form-check-label" for="nodesel-strat-distance-voting-btn">Similarity Selection (Voting)</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="nodeSelectionStrategyOptions"
+                            id="nodesel-strat-distance-voting-sustainability-btn" value="distance-voting-sustainability" checked>
+                        <label class="form-check-label" for="nodesel-strat-distance-voting-sustainability-btn">Similarity Selection (Voting + Sustainability)</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="nodeSelectionStrategyOptions"
