--- a/nebula/frontend/templates/deployment.html
+++ b/nebula/frontend/templates/deployment.html
@@ -196,8 +196,10 @@
                     </div>
                     <h5 class="step-title">Scenario description</h5>
                     <div class="form-check form-check-inline">
-                        <input type="text" class="form-control" id="scenario-description" style="width: 75%"
-                            placeholder="Write a description for the scenario">
+                        <!-- <input type="text" class="form-control" id="scenario-description" style="width: 75%"
+                            placeholder="Write a description for the scenario"> -->
+                        <textarea class="form-control" id="scenario-description" rows="3" style="width: 75%"
+                            placeholder="Write a description for the scenario"></textarea>
                     </div>
                 </div>
                 <div class="form-group row container-shadow tiny grey" id="deployment-group">
