--- a/nebula/frontend/templates/deployment.html
+++ b/nebula/frontend/templates/deployment.html
@@ -1256,9 +1256,9 @@
     <script>
         // Check values of datasetSelect and then show the models available for that dataset in modelSelect
         var datasets = {
-            "MNIST": ["MLP", "CNN"],
-            "FashionMNIST": ["MLP", "CNN"],
-            "EMNIST": ["MLP", "CNN"],
+            "MNIST": ["MLP", "CNN", "ResNet9"],
+            "FashionMNIST": ["MLP", "CNN", "ResNet9"],
+            "EMNIST": ["MLP", "CNN", "ResNet9"],
             "CIFAR10": ["CNN", "CNNv2", "CNNv3", "ResNet9", "fastermobilenet", "simplemobilenet"],
             "CIFAR100": ["CNN"],
             "KITSUN": ["MLP"],
